P01/Tests/SyntaxErrors/badtrans3.tm
states 3
B
A +
C -
alphabet 2 0 1
B 0 * 1 R
